@@ -3,7 +3,6 @@ package com.example.demo.config;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -14,7 +13,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -28,15 +27,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(List.of(
-                "http://localhost:*",
-                "http://127.0.0.1:*",
-                "null"
-        ));
-        config.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedOriginPatterns(Arrays.asList("http://localhost:3000", "http://localhost:8080"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowCredentials(true);
-        config.setExposedHeaders(List.of("Set-Cookie"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
@@ -45,26 +38,33 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(Customizer.withDefaults())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .formLogin(form -> form.disable())
                 .httpBasic(basic -> basic.disable())
                 .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
                 .authorizeHttpRequests(auth -> auth
-                                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                                .requestMatchers("/static/**").permitAll()
-                                .requestMatchers("/", "/*.html", "/*.css", "/*.js",
-                                        "/*.png","/*.jpg","/*.jpeg","/*.gif",
-                                        "/*.svg","/*.webp","/*.ico",
-                                        "/*.woff","/*.woff2","/*.ttf").permitAll()
-                                .requestMatchers("/api/users/login").permitAll()
-                                .requestMatchers("/api/users/signup").permitAll()
-                                .requestMatchers("/api/users/logout").permitAll()
-                                .requestMatchers("/api/ping").permitAll() // 추가된 테스트 엔드포인트도 허용
-                                .requestMatchers("/mypage_info").permitAll()
-                                .requestMatchers("/mypage/**").permitAll()
-                                .anyRequest().permitAll()
-                );
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        .requestMatchers(
+                                "/", "/main",
+                                "/user/login", "/user/signup",
+                                "/api/users/login", "/api/users/signup", "/api/user/login", "/api/ping",
+                                "/memorial", "/memorial/**",
+                                "/mypage_info", "/mypage/**",
+                                "/user/me", "/api/users/me").permitAll()
+                        .requestMatchers(
+                                "/*.html", "/*.css", "/*.js", "/*.ico",
+                                "/*.png", "/*.jpg", "/*.jpeg", "/*.gif",
+                                "/*.svg", "/*.webp", "/*.woff", "/*.woff2", "/*.ttf",
+                                "/static/**", "/css/**").permitAll()
+                        .anyRequest().authenticated()
+                )
+                .logout(logout -> logout
+                        .logoutUrl("/user/logout")
+                        .logoutSuccessUrl("/user/login")
+                        .invalidateHttpSession(true)
+                        .deleteCookies("JSESSIONID")
+                        .permitAll());
         return http.build();
     }
 }
